# qrurls

./: CITATION.cff  LICENSE  README.md  example.py  pyproject.toml  qrurls_interactive.ipynb  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  publish.yml
qrurls/: __init__.py  cli.py  core.py  exceptions.py  qr_generator.py  url_shortener.py
tests/: conftest.py  test_cli.py  test_core.py  test_exceptions.py  test_qr_generator.py  test_url_shortener.py
