[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrurls"
version = "0.1.0"
description = "Generate QR codes and shorten URLs using open source services"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Priyanka O", email = "priyankaoe@gmail.com"}
]
keywords = ["qr", "qrcode", "url", "shortener", "link"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "qrcode[pil]>=7.3.1",
    "requests>=2.25.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/priya-gitTest/qrurls"
Documentation = "https://github.com/priya-gitTest/qrurls#readme"
Repository = "https://github.com/priya-gitTest/qrurls"
Issues = "https://github.com/priya-gitTest/qrurls/issues"