[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qrurls"
version = "0.1.0"
description = "Generate QR codes and shorten URLs using open source services"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Priyanka O", email = "priyankaoe@gmail.com"}
]
keywords = ["qr", "qrcode", "url", "shortener", "link"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "qrcode[pil]>=7.3.1",
    "requests>=2.25.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.0",
    "types-requests>=2.25.0",
]
notebook = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "notebook>=7.0.0",
]
streamlit = [
    "streamlit>=1.24.0",
]

[project.scripts]
qrurls = "qrurls.cli:main"

[project.urls]
Homepage = "https://github.com/priya-gitTest/qrurls"
Documentation = "https://github.com/priya-gitTest/qrurls#readme"
Repository = "https://github.com/priya-gitTest/qrurls"
Issues = "https://github.com/priya-gitTest/qrurls/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["qrcode", "qrcode.*"]
ignore_missing_imports = true
